--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,16 @@
-/* ul {
+:root {
+    --white: #F7F7F7;
+    --black: #1E1E1E;
+    /* --main-color: pink; */
+    --sub-color: #E6D129;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -6,4 +18,4 @@
 
 a {
     text-decoration: none;
-} */
+}
