--- a/sass/2-helpers/_variables.scss
+++ b/sass/2-helpers/_variables.scss
@@ -1,7 +1,9 @@
 // =============== Colors ===============
 $off-white: #eee;
 $off-black: #1e1e1e;
-$sub-color: #fcfc17;
+$gray: #313131;
+$main-color: #fcfc17;
 
 // Using SCSS variables to store breakpoints
 $breakpoint-tablet: 768px;
+$breakpoint-moble: 640px;
