--- a/sass/0-base/_global.scss
+++ b/sass/0-base/_global.scss
@@ -1,4 +1,11 @@
 .btn {
-    cursor: pointer;
     padding: .5rem;
+    border: 1px solid black;
+    text-align: center;
+    cursor: pointer;
+    transition: .1s;
+}
+
+a:hover {
+    transition: .1s;
 }
