--- a/sass/3-layout/_navbar.scss
+++ b/sass/3-layout/_navbar.scss
@@ -9,17 +9,11 @@
     margin: 0 auto;
     width: 100%;
     max-width: 900px;
+    font-family: "poppins-medium", sans-serif;
     color: $off-white;
 
-    &__logo {
-        font-size: 1.2rem;
-        cursor: pointer;
-        display: flex;
-        min-width: 30%;
-
-        &:hover {
-         color: $sub-color;
-        }
+    &__logo--img {
+        width: 8.5rem;
     }
 
     &__toggle {
@@ -29,15 +23,17 @@
     &__list {
         display: flex;
         justify-content: space-around;
+        align-items: center;
         width: 50%;
     }
 
     &__list--item {
-        font-size: 1.2rem;
         color: $off-white;
+        font-size: 1rem;
+        text-transform: uppercase;
 
        &:hover {
-            color: $sub-color;
+            color: $main-color;
         }
     }
 }
@@ -61,30 +57,34 @@
 @media (max-width: $breakpoint-tablet) {
   
     .navbar {
-       flex-direction: column; 
-
+       flex-direction: column;
+       
        &__toggle {
         display: initial;
-        cursor: pointer;
-        position: absolute;
         align-self: flex-end;
+        position: absolute;
+        top: 17px;
+        cursor: pointer;
+        font-size: 1.5rem;
+
+        &:hover {
+            color: $main-color;
+        }
 
        }
 
        &__list {
         flex-direction: column;
+        align-items: flex-start;
+        height: 15rem;
+      
        }
+
 
        &__list--hide {
         display: none;
-    }
+      }
 
     }
-
- 
- 
-
-
     
-    
-  }
+}
