added img of me and finished about section

--- a/sass/2-helpers/_variables.scss
+++ b/sass/2-helpers/_variables.scss
@@ -2,6 +2,7 @@
 $off-white: #eee;
 $off-black: #1e1e1e;
 $gray: #313131;
+$link: #63028F;
 $main-color: #fcfc17;
 
 // Using SCSS variables to store breakpoints
