--- a/css/main.css
+++ b/css/main.css
@@ -59,8 +59,9 @@ a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -229,5 +230,71 @@ a:hover {
   .home__social--item {
     font-size: 1.7rem;
   }
+}
+
+#about {
+  background-color: #eee;
+  min-height: 70vh;
+  padding-bottom: 2.5rem;
+}
+
+.about-title {
+  margin: 0;
+  margin-left: 2.5rem;
+  padding: 1.5rem;
+  font-family: "poppins-medium", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.about-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 930px;
+}
+
+.about-content__div {
+  border: 0.5rem solid #1e1e1e;
+  border-radius: 5%;
+}
+
+.about-content__div--img {
+  width: 20rem;
+  border-radius: 5%;
+  position: relative;
+  top: -2rem;
+  left: 2rem;
+}
+
+.about-content__info {
+  width: 500px;
+}
+
+.about-content__info--text {
+  line-height: 1.3;
+  font-size: 1.03rem;
+}
+
+.about-content__info--btns {
+  padding-top: 1rem;
+}
+
+.btn__about {
+  padding: .7rem;
+  font-size: 1.1rem;
+  margin-right: 1rem;
+  color: #63028F;
+}
+
+.btn__about:hover {
+  background-color: #2b2b2b;
+  color: #eee;
 }
 /*# sourceMappingURL=main.css.map */
