mad about responsive

--- a/sass/2-helpers/_variables.scss
+++ b/sass/2-helpers/_variables.scss
@@ -1,7 +1,7 @@
 // =============== Colors ===============
 $off-white: #eee;
 $off-black: #1e1e1e;
-$gray: #313131;
+$grey: #313131;
 $link: #63028F;
 $main-color: #fcfc17;
 
