--- a/sass/3-layout/_navbar.scss
+++ b/sass/3-layout/_navbar.scss
@@ -22,7 +22,7 @@
 
     &__list {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         width: 50%;
     }
