--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,9 @@ a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -183,9 +183,15 @@ a:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: absolute;
+  top: 40%;
+  left: 50%;
   margin-top: 10rem;
   min-height: 30rem;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   text-align: center;
+  white-space: nowrap;
 }
 
 .home__social {
@@ -208,6 +214,27 @@ a:hover {
   color: #fcfc17;
 }
 
+@media (max-width: 768px) {
+  .home__my-info--greeting {
+    font-size: 2.4rem;
+  }
+  .home__my-info--name {
+    font-size: 4.5rem;
+  }
+  .home__my-info--job {
+    font-size: 1rem;
+  }
+  .home__my-info--job-separator {
+    display: none;
+  }
+  .btn__home {
+    font-size: 1rem;
+  }
+  .home__social--item {
+    font-size: 2rem;
+  }
+}
+
 @media (max-width: 640px) {
   .home__my-info--greeting {
     font-size: 1.4rem;
@@ -222,10 +249,26 @@ a:hover {
     display: none;
   }
   .home-container {
-    margin-top: 3.5rem;
+    all: unset;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 5rem;
+    height: 30rem;
+    text-align: center;
   }
   .btn__home {
     font-size: .8rem;
+  }
+  .home__social {
+    margin-bottom: 1rem;
   }
   .home__social--item {
     font-size: 1.7rem;
@@ -246,6 +289,7 @@ a:hover {
   font-size: 2rem;
   text-align: center;
   text-transform: uppercase;
+  text-shadow: 1px 1px 2px #313131;
 }
 
 .about-content {
@@ -274,7 +318,7 @@ a:hover {
 }
 
 .about-content__info {
-  width: 500px;
+  max-width: 500px;
 }
 
 .about-content__info--text {
@@ -296,5 +340,23 @@ a:hover {
 .btn__about:hover {
   background-color: #2b2b2b;
   color: #eee;
+}
+
+@media (max-width: 768px) {
+  .about-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .about-content__div--img {
+    position: inherit;
+  }
+  .about-content__info {
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=main.css.map */
