--- a/sass/3-layout/_about.scss
+++ b/sass/3-layout/_about.scss
@@ -13,6 +13,7 @@
     font-size: 2rem;
     text-align: center;
     text-transform: uppercase;
+    text-shadow: 1px 1px 2px $grey;
     
 }
 
@@ -38,7 +39,7 @@
     }
 
     &__info {
-        width: 500px;
+        max-width: 500px;
     }
 
     &__info--text {
@@ -64,3 +65,23 @@
     }
 }
 
+
+
+
+
+
+@media (max-width: $breakpoint-tablet) {
+
+    .about-content {
+        flex-direction: column;
+        align-items: center;
+
+        &__div--img {
+            position: inherit;
+        }
+
+        &__info {
+           text-align: center;
+        }
+    }
+}
