--- a/sass/3-layout/_home.scss
+++ b/sass/3-layout/_home.scss
@@ -68,10 +68,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: absolute;
+    top: 40%;
+    left: 50%;
     margin-top: 10rem;
     min-height: 30rem;
+    transform: translate(-50%, -50%);
     text-align: center;
-    // background-color: darkorchid;
+    white-space: nowrap;
 }
 
 
@@ -105,6 +109,43 @@
   
 
 // }
+@media (max-width: $breakpoint-tablet) {
+
+    .home__my-info {
+
+        &--greeting {
+            font-size: 2.4rem;
+        }
+        &--name {
+            font-size: 4.5rem;
+        }
+            
+        &--job {
+            font-size: 1rem;
+            &-separator {
+                display: none;
+            }
+        }
+    }
+
+    // .home-container{
+    //     margin-top: 3.5rem;
+
+      
+    // }
+    
+    .btn__home {
+        font-size: 1rem;
+    }
+    
+    .home__social {
+        &--item {
+            font-size: 2rem;
+        }
+    }
+  
+
+}
 @media (max-width: $breakpoint-moble) {
 
     .home__my-info {
@@ -125,9 +166,13 @@
     }
 
     .home-container{
-        margin-top: 3.5rem;
-
-      
+        all: unset;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 5rem;
+        height: 30rem;
+        text-align: center;
     }
     
     .btn__home {
@@ -135,6 +180,7 @@
     }
     
     .home__social {
+        margin-bottom: 1rem;
         &--item {
             font-size: 1.7rem;
         }
