--- a/sass/0-base/_reset.scss
+++ b/sass/0-base/_reset.scss
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "lora-regular", serif;
+    background-color: #eee;
 
     ul {
         list-style-type: none;
