--- a/css/main.css
+++ b/css/main.css
@@ -152,8 +152,18 @@ a:hover {
   text-shadow: 0 0 6px #00000033;
 }
 
-.home__my-info--job-separator {
-  color: #1e1e1e;
+.home__my-info--job1 {
+  margin-right: 1rem;
+}
+
+.home__my-info--job1::after {
+  content: "";
+  display: table-cell;
+  position: relative;
+  top: -6px;
+  left: 10.5px;
+  padding: 10px 1px;
+  background-color: #050505;
 }
 
 .btn__home {
@@ -225,9 +235,6 @@ a:hover {
   .home__my-info--job {
     font-size: 1rem;
   }
-  .home__my-info--job-separator {
-    display: none;
-  }
   .btn__home {
     font-size: 1rem;
   }
@@ -244,9 +251,16 @@ a:hover {
     font-size: 3.5rem;
   }
   .home__my-info--job {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-size: 1rem;
   }
-  .home__my-info--job-separator {
+  .home__my-info--job1::after {
     display: none;
   }
   .home-container {
@@ -278,7 +292,7 @@ a:hover {
 
 #about {
   min-height: 70vh;
-  padding-bottom: 2rem;
+  padding-bottom: 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -333,6 +347,7 @@ a:hover {
 }
 
 .about-content__info--text {
+  font-family: "poppins-regular", sans-serif;
   line-height: 1.3;
   font-size: 1.03rem;
 }
@@ -385,6 +400,7 @@ a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-bottom: 1rem;
   min-height: 60vh;
   background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.356)), to(rgba(0, 0, 0, 0.356))), url("../../images/niketh-vellanki-252581-unsplash.jpg");
   background: linear-gradient(to right, rgba(0, 0, 0, 0.356), rgba(0, 0, 0, 0.356)), url("../../images/niketh-vellanki-252581-unsplash.jpg");
@@ -396,14 +412,13 @@ a:hover {
 
 .skills-title {
   margin: 2rem 0;
-  margin-left: 5rem;
   padding: 1.5rem;
   font-family: "poppins-medium", sans-serif;
   font-size: 2rem;
   text-align: center;
   letter-spacing: .5rem;
   text-transform: uppercase;
-  text-shadow: 1px 1px 2px #313131;
+  text-shadow: 4px 0px 2px #313131;
 }
 
 .skills-container {
@@ -419,13 +434,52 @@ a:hover {
 }
 
 .skills__list {
-  all: unset;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
 }
 
 .skills__list--header {
   margin: 0;
   margin-bottom: 1rem;
   font-family: "poppins-medium", sans-serif;
+}
+
+.skills__list--header::after {
+  content: "";
+  display: table;
+  padding: 1px 24px;
+  background-color: #fcfc17;
+}
+
+.skills__list--item {
+  font-family: "poppins-regular", sans-serif;
+  font-size: 1rem;
+  text-indent: .6rem;
+  line-height: 1.5rem;
+}
+
+.skills__list--item::before {
+  content: "";
+  display: inline-table;
+  position: relative;
+  top: -7px;
+  left: -8px;
+  margin-right: .6rem;
+  padding: 1px 10px;
+  background-color: #fcfc17;
+}
+
+@media (max-width: 768px) {
+  .skills-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 15%;
+    text-align: left;
+  }
+  .skills__list {
+    margin-bottom: 2rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
