--- a/sass/3-layout/_home.scss
+++ b/sass/3-layout/_home.scss
@@ -40,9 +40,20 @@
         line-height: 2.4rem;
         text-shadow: 0 0 6px #00000033;
 
-        &-separator {
-           color: $off-black;
+        &1 {
+            margin-right: 1rem;
+            &::after {
+                content: "";
+                display: table-cell;
+                position: relative;
+                top: -6px;
+                left: 10.5px;
+                padding: 10px 1px;
+                background-color: darken($off-black, 10%);
+            }
         }
+
+    
     }
 }
 
@@ -122,9 +133,9 @@
             
         &--job {
             font-size: 1rem;
-            &-separator {
-                display: none;
-            }
+
+           
+        
         }
     }
 
@@ -158,8 +169,10 @@
         }
             
         &--job {
+            display: flex;
+            flex-direction: column;
             font-size: 1rem;
-            &-separator {
+            &1::after {
                 display: none;
             }
         }
