finished project sec

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ a {
 .btn {
   padding: .5rem;
   border: 1px solid black;
+  color: #63028F;
   text-align: center;
   cursor: pointer;
   -webkit-transition: .1s;
@@ -360,7 +361,6 @@ a:hover {
   padding: .7rem;
   font-size: 1.1rem;
   margin-right: 1rem;
-  color: #63028F;
 }
 
 .btn__about:hover {
@@ -480,6 +480,83 @@ a:hover {
   }
   .skills__list {
     margin-bottom: 2rem;
+  }
+}
+
+.projects-title {
+  margin: 2rem 0;
+  padding: 1.5rem;
+  font-family: "poppins-medium", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  letter-spacing: .5rem;
+  text-transform: uppercase;
+  text-shadow: 4px 0px 2px #313131;
+}
+
+.projects-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.project {
+  margin: .5rem;
+  border: 0.2rem solid #1e1e1e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 35rem;
+  margin: .5rem;
+  padding: 1rem;
+  -webkit-box-shadow: 3px 2px 3px 1px #0000006b;
+          box-shadow: 3px 2px 3px 1px #0000006b;
+}
+
+.project__img--item {
+  width: 15rem;
+  margin-right: 1.5rem;
+}
+
+.project__info {
+  width: 20rem;
+}
+
+.btn__project:visited {
+  color: #1d012a;
+}
+
+@media (max-width: 640px) {
+  .projects-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .project {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-width: 5rem;
+  }
+  .project__img--item {
+    margin: 0;
+  }
+  .project__info {
+    width: auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
