--- a/sass/0-base/_global.scss
+++ b/sass/0-base/_global.scss
@@ -1,7 +1,7 @@
 .btn {
     padding: .5rem;
     border: 1px solid black;
-    
+    color:#63028F;
     text-align: center;
     cursor: pointer;
     transition: .1s;
