--- a/css/main.css
+++ b/css/main.css
@@ -601,6 +601,7 @@ a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 1rem;
 }
 
 .contact__input--item {
@@ -608,6 +609,7 @@ a:hover {
   border-bottom: 0.15rem solid #d5d5d5;
   margin: 1rem;
   width: 45rem;
+  max-width: 100%;
   height: 4rem;
   font-family: "poppins-regular", sans-serif;
   color: #eee;
@@ -626,7 +628,7 @@ a:hover {
 
 .btn__contact {
   border: 0.15rem solid #d5d5d5;
-  margin-top: 1rem;
+  margin: 2rem 0;
   padding: 1rem;
   font-size: 1.2rem;
   color: #eee;
