--- a/sass/3-layout/_contact.scss
+++ b/sass/3-layout/_contact.scss
@@ -25,6 +25,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1rem;
 
     &--item{
         // display: block;
@@ -32,6 +33,7 @@
         border-bottom: .15rem solid darken($off-white, 10%);
         margin: 1rem;
         width: 45rem;
+        max-width: 100%;
         height: 4rem;
         font-family: "poppins-regular", sans-serif;
         color: $off-white;
@@ -52,7 +54,7 @@
 
 .btn__contact {
     border: .15rem solid darken($off-white, 10%);
-    margin-top: 1rem;
+    margin: 2rem 0;
     padding: 1rem;
     font-size: 1.2rem;
     color: $off-white;
